# llm-scanner

./: .gitignore  Cargo.toml  README.md  config.default.toml  prompts.default.csv  test_responses.csv
data/: .gitkeep
defaults/: judge_prompt.default.md  prompts.default.csv  safe_patterns.default.csv  test_responses.default.csv  unsafe_patterns.default.csv
output/: .gitkeep
src/: chat.rs  config.rs  generic.rs  main.rs  output.rs  prompts.rs
