[package]
name = "llm-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.50", features = ["derive"] }
anyhow = "1.0.100"
toml = "0.9.8"
